--- a/react/my-app/src/App.css
+++ b/react/my-app/src/App.css
@@ -1,6 +1,25 @@
-.App {
-  border: 4px salmon solid;
+*{
+  box-sizing:border-box;
+  margin: 0;
+  top: 0;
+}
+body{
+  width: 95vw;
+  margin: 0 auto;
 }
 
+.App {
+  border: 4px rgb(241, 216, 213) solid;
+}
+
+.main-nav{
+  list-style-type: none;
+  text-align: center;
+  margin: 5px;
+}
+.main-nav li{
+  display: inline-block;
+  
+} 
 
   
