--- a/react/my-app/src/components/App.css
+++ b/react/my-app/src/components/App.css
@@ -1,3 +1,14 @@
+.header{
+  background-color: rgb(37, 108, 221);
+  color: aliceblue;
+  height: 10vh;
+  padding: 10px;
+}
+
+
+
+
+
 #students {
     text-align: center;
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
