--- a/react/my-app/src/App.css
+++ b/react/my-app/src/App.css
@@ -12,15 +12,9 @@ body{
   border: 4px rgb(241, 216, 213) solid;
 }
 
-/* .main-nav{
-  list-style-type: none;
-  text-align: center;
-  margin: 5px;
-  text-decoration: none;
+.btn{
+  margin-top: 5px;
+  margin-left: 5px;
 }
-.main-nav li{
-  display: inline-block;
-  
-}  */
 
   
